[MULTI-24] Remove IsolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock from perp and complete its transition into collateral pool
