# indexer/packages/postgres/src/types/db-model-types.ts
@@ -86,7 +86,6 @@ export interface PerpetualMarketFromDatabase {
   quantumConversionExponent: number;
   atomicResolution: number;
   dangerIndexPpm: number;
-  isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock: string;
   subticksPerTick: number;
   stepBaseQuantums: number;
   liquidityTierId: number;
