# indexer/packages/postgres/src/types/websocket-message-types.ts
@@ -207,7 +207,6 @@ export interface TradingPerpetualMarketMessage {
   quantumConversionExponent?: number;
   atomicResolution?: number;
   dangerIndexPpm?: number;
-  isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock?: string;
   subticksPerTick?: number;
   stepBaseQuantums?: number;
   openInterestLowerCap?: string;
