# indexer/services/comlink/public/swagger.json
@@ -803,9 +803,6 @@
             "type": "number",
             "format": "double"
           },
-          "isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock": {
-            "type": "string"
-          },
           "quantumConversionExponent": {
             "type": "number",
             "format": "double"
@@ -849,7 +846,6 @@
           "openInterest",
           "atomicResolution",
           "dangerIndexPpm",
-          "isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock",
           "quantumConversionExponent",
           "tickSize",
           "stepSize",
