# indexer/services/comlink/src/request-helpers/request-transformer.ts
@@ -353,8 +353,6 @@ export function perpetualMarketToResponseObject(
     openInterest: perpetualMarket.openInterest,
     atomicResolution: perpetualMarket.atomicResolution,
     dangerIndexPpm: perpetualMarket.dangerIndexPpm,
-    isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock:
-      perpetualMarket.isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock,
     quantumConversionExponent: perpetualMarket.quantumConversionExponent,
     tickSize: protocolTranslations.getTickSize(perpetualMarket),
     stepSize: protocolTranslations.getStepSize(perpetualMarket),
