# indexer/services/comlink/src/types.ts
@@ -250,7 +250,6 @@ export interface PerpetualMarketResponseObject {
   openInterest: string;
   atomicResolution: number;
   dangerIndexPpm: number;
-  isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock: string;
   quantumConversionExponent: number;
   tickSize: string;
   stepSize: string;
