# protocol/x/perpetuals/keeper/msg_server_update_perpetual_params.go
@@ -31,7 +31,6 @@ func (k msgServer) UpdatePerpetualParams(
 		msg.PerpetualParams.DefaultFundingPpm,
 		msg.PerpetualParams.LiquidityTier,
 		msg.PerpetualParams.DangerIndexPpm,
-		msg.PerpetualParams.IsolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock,
 		msg.PerpetualParams.IsolatedMarketMultiCollateralAssets,
 		msg.PerpetualParams.QuoteAssetId,
 		msg.PerpetualParams.CollateralPoolId,
