# protocol/x/perpetuals/types/types.go
@@ -72,7 +72,6 @@ type PerpetualsKeeper interface {
 		defaultFundingPpm int32,
 		liquidityTier uint32,
 		dangerIndexPpm uint32,
-		isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock uint64,
 		isolatedMarketMultiCollateralAssets *MultiCollateralAssetsArray,
 		quoteAssetId uint32,
 		collateralPoolId uint32,
@@ -85,7 +84,6 @@ type PerpetualsKeeper interface {
 		defaultFundingPpm int32,
 		liquidityTier uint32,
 		dangerIndexPpm uint32,
-		isolatedMarketMaxCumulativeInsuranceFundDeltaPerBlock uint64,
 		isolatedMarketMultiCollateralAssets *MultiCollateralAssetsArray,
 		quoteAssetId uint32,
 		collateralPoolId uint32,
